Tue Dec 14 19:18:22 1999  Marcel Bosc  <bosc@ceic.com>

	* WordBitCompress: code cleaned up and commented

Tue Dec 14 18:32:21 1999  Loic Dachary  <loic@ceic.com>

	* htword/Word{Record,Reference,Key}: added a Get method to 
	  convert the structure into it's ascii string representation.
	  operator << now uses Get.

Tue Dec 14 17:46:33 1999  Loic Dachary  <loic@ceic.com>

	* db/dist/Makefile.in (install): fix bugous test for libshared

Tue Dec 14 14:10:28 1999  Loic Dachary  <loic@ceic.com>

	* htword/{WordKey,WordReference,WordRecord}: rework
	  the input methods (operator >>). Each class now has a Set function
	  to initialize itself from an ascii description and a Get function
	  to retrieve an ascii description of the object.

	* htword/WordList: operator >> has a better and cleaner input loop
	  using StringList and String instead of char*. 

Tue Dec 14 12:06:24 1999  Marcel Bosc  <bosc@ceic.com>

	* WordDBCompress.cc : Added compression version checking

Mon Dec 13 21:09:31 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>

	* htcommon/conf_parser.lxx, htcommon/conf_lexer.cxx:
 	Added #include <string.h> Without it failed to compile
 	on Solaris.
	
Mon Dec 13 16:31:27 1999  Marcel Bosc  <bosc@ceic.com>

	* htword/WordBitCompress.cc : fixed bug that made compression
	fail on big documents or big number of url's ...

Mon Dec 13 13:49:35 1999  Loic Dachary  <loic@ceic.com>

	* htword/WordKey.h.tmpl: Added *_POSITION macro generation

Mon Dec 13 11:51:50 1999  Marcel Bosc <bosc@ceic.com>

	* htcommon/conf_parser.yxx: fixed several delete that should be delete []

Sun Dec 12 17:14:00 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>

	* htcommon/conf_lexer.lxx, htcommon/conf_lexer.cxx:
	national symbols are allowed in right part of expressions
	(noted by Marcel Bosc).
	Changed default behavior of flex from print unknown chars
	on stdout to exit with error message.

Sat Dec 11 17:34:03 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>
