@@ -1,7 +1,7 @@
 /* A lexical scanner generated by flex */
 
 /* Scanner skeleton version:
- * $Header: /usr/data/kleinrob/htdig-zeugs/htdig.cvs/htdig/htcommon/conf_lexer.cxx,v 1.1.2.3 1999/12/13 19:27:03 vadim Exp $
+ * $Header: /usr/data/kleinrob/htdig-zeugs/htdig.cvs/htdig/htcommon/conf_lexer.cxx,v 1.1.2.4 1999/12/14 20:15:59 vadim Exp $
  */
 
 #define FLEX_SCANNER
@@ -456,14 +456,21 @@ char *yytext;
 #define br_string 4
 
 #line 10 "../../htdig3/htcommon/conf_lexer.lxx"
-#include <string.h>
+#ifdef HAVE_CONFIG_H
+#include "htconfig.h"
+#endif
+
+#ifdef HAVE_STRINGS_H
+#include <strings.h>
+#endif
+
 #include "HtConfiguration.h"
 //#include "Dictionary.h"
 #include "conf.tab.cc.h"
 #define MAX_INCLUDE_DEPTH 10
 YY_BUFFER_STATE include_stack[MAX_INCLUDE_DEPTH];
 int include_stack_ptr = 0;
-#line 467 "lex.yy.c"
+#line 474 "lex.yy.c"
 
 /* Macros after this point can all be overridden by user definitions in
  * section 1.
@@ -617,10 +624,10 @@ YY_DECL
 	register char *yy_cp, *yy_bp;
 	register int yy_act;
 
-#line 23 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 30 "../../htdig3/htcommon/conf_lexer.lxx"
 
 
-#line 624 "lex.yy.c"
+#line 631 "lex.yy.c"
 
 	if ( yy_init )
 		{
@@ -714,42 +721,42 @@ do_action:	/* This label is used only to access EOF actions. */
 	{ /* beginning of action switch */
 case 1:
 YY_RULE_SETUP
-#line 25 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 32 "../../htdig3/htcommon/conf_lexer.lxx"
 /*   Ignore comments     */
 	YY_BREAK
 case 2:
 YY_RULE_SETUP
-#line 26 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 33 "../../htdig3/htcommon/conf_lexer.lxx"
 /*   Ignore emty lines   */
 	YY_BREAK
 case 3:
 YY_RULE_SETUP
-#line 27 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 34 "../../htdig3/htcommon/conf_lexer.lxx"
 /*   Ignore spaces       */
 	YY_BREAK
 case 4:
 YY_RULE_SETUP
-#line 28 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 35 "../../htdig3/htcommon/conf_lexer.lxx"
 BEGIN(incl);
 	YY_BREAK
 case 5:
 YY_RULE_SETUP
-#line 29 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 36 "../../htdig3/htcommon/conf_lexer.lxx"
 { BEGIN(bracket); return(T_LEFT_BR); }
 	YY_BREAK
 case 6:
 YY_RULE_SETUP
-#line 30 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 37 "../../htdig3/htcommon/conf_lexer.lxx"
 return(T_SLASH);
 	YY_BREAK
 case 7:
 YY_RULE_SETUP
-#line 31 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 38 "../../htdig3/htcommon/conf_lexer.lxx"
 return(T_RIGHT_BR);
 	YY_BREAK
 case 8:
 YY_RULE_SETUP
-#line 32 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 39 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 			//yylval.str = (char *)malloc(yyleng+1);
                         yylval.str = new char[yyleng+1];
@@ -759,7 +766,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 9:
 YY_RULE_SETUP
-#line 38 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 45 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 			BEGIN(bracket);
 			yylval.str = new char[yyleng+1];
@@ -769,7 +776,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 10:
 YY_RULE_SETUP
-#line 45 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 52 "../../htdig3/htcommon/conf_lexer.lxx"
 {
                         //yylval.str = (char*)malloc(yyleng+1);
                         yylval.str = new char[yyleng+1];
@@ -779,7 +786,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 11:
 YY_RULE_SETUP
-#line 52 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 59 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 			if (YY_START==bracket)
 			    BEGIN(br_string);
@@ -790,7 +797,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 12:
 YY_RULE_SETUP
-#line 60 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 67 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 			//yylval.str = (char *)malloc(yyleng+1-2);
                         yylval.str = new char[yyleng+1-2];
@@ -802,7 +809,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 13:
 YY_RULE_SETUP
-#line 69 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 76 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 			yylval.str = new char[yyleng+1];
 			strcpy(yylval.str,yytext);
@@ -811,7 +818,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 14:
 YY_RULE_SETUP
-#line 75 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 82 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 			//yylval.str = (char *)malloc(yyleng+1);
                         yylval.str = new char[yyleng+1];
@@ -821,17 +828,17 @@ YY_RULE_SETUP
 	YY_BREAK
 case 15:
 YY_RULE_SETUP
-#line 81 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 88 "../../htdig3/htcommon/conf_lexer.lxx"
 /*   Ignore newline after "\"    */
 	YY_BREAK
 case 16:
 YY_RULE_SETUP
-#line 83 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 90 "../../htdig3/htcommon/conf_lexer.lxx"
 /*   Ignore spaces               */
 	YY_BREAK
 case 17:
 YY_RULE_SETUP
-#line 85 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 92 "../../htdig3/htcommon/conf_lexer.lxx"
 { /* got the include file name */
 			if ( include_stack_ptr >= MAX_INCLUDE_DEPTH )
 			    {
@@ -857,7 +864,7 @@ case YY_STATE_EOF(t_right):
 case YY_STATE_EOF(incl):
 case YY_STATE_EOF(bracket):
 case YY_STATE_EOF(br_string):
-#line 105 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 112 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 		        if ( --include_stack_ptr < 0 )
 		            yyterminate();
@@ -871,7 +878,7 @@ case YY_STATE_EOF(br_string):
 	YY_BREAK
 case 18:
 YY_RULE_SETUP
-#line 117 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 124 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 			BEGIN(INITIAL);
 			return(T_NEWLINE);
@@ -879,17 +886,17 @@ YY_RULE_SETUP
 	YY_BREAK
 case 19:
 YY_RULE_SETUP
-#line 121 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 128 "../../htdig3/htcommon/conf_lexer.lxx"
 
 	YY_BREAK
 case 20:
 YY_RULE_SETUP
-#line 123 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 130 "../../htdig3/htcommon/conf_lexer.lxx"
 
 	YY_BREAK
 case 21:
 YY_RULE_SETUP
-#line 124 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 131 "../../htdig3/htcommon/conf_lexer.lxx"
 { 
 	fprintf(stderr,"Unknown char in line %d: %s",yylineno,yytext);
 	exit(1);
@@ -897,10 +904,10 @@ YY_RULE_SETUP
 	YY_BREAK
 case 22:
 YY_RULE_SETUP
-#line 128 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 135 "../../htdig3/htcommon/conf_lexer.lxx"
 ECHO;
 	YY_BREAK
-#line 904 "lex.yy.c"
+#line 911 "lex.yy.c"
 
 	case YY_END_OF_BUFFER:
 		{
@@ -1784,5 +1791,5 @@ int main()
 	return 0;
 	}
 #endif
-#line 128 "../../htdig3/htcommon/conf_lexer.lxx"
+#line 135 "../../htdig3/htcommon/conf_lexer.lxx"
 
