@@ -1,3 +1,9 @@
+Tue Dec 14 21:56:57 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>
+
+	* htcommon/conf_parser.lxx, htcommon/conf_lexer.cxx:
+	bcopy on Solaris is in strings.h, not in string.h. Added
+ 	check for #ifdef HAVE_STRINGS_H
+	
 Tue Dec 14 19:18:22 1999  Marcel Bosc  <bosc@ceic.com>
 
 	* WordBitCompress: code cleaned up and commented
